# Frogs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: case.hpp  cbma.hpp  command_line.hpp  follower.hpp  heuristic_interface.hpp  individual.hpp  initializer.hpp  lahc.hpp  leader_array.hpp  leader_cbma.hpp  leader_lahc.hpp  leader_sga.hpp  parameters.hpp  preprocessor.hpp  sga.hpp  solution.hpp  stats_interface.hpp
src/: case.cpp  cbma.cpp  command_line.cpp  follower.cpp  individual.cpp  initializer.cpp  lahc.cpp  leader_array.cpp  leader_cbma.cpp  leader_lahc.cpp  leader_sga.cpp  preprocessor.cpp  sga.cpp  solution.cpp  stats_interface.cpp
tests/: case_test.cpp  cbma_test.cpp  command_line_test.cpp  follower_test.cpp  individual_test.cpp  lahc_test.cpp  leader_array_test.cpp  leader_lahc_test.cpp  leader_sga_test.cpp  preprocessor_test.cpp  sga_test.cpp  split_test.cpp  test_main.cpp
